--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       #root {
         min-height: 300px;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        flex-direction: column;
       }
     </style>
   </head>
@@ -28,8 +27,5 @@
       <h1>FocusFlow Extension</h1>
       <p>Please enable JavaScript to view the content.</p>
     </div>
-    <!-- If you're using webpack with HtmlWebpackPlugin this script tag might be auto-injected;
-         otherwise, uncomment and update the path accordingly -->
-    <!--<script type="module" src="./index.bundle.js"></script>-->
   </body>
 </html>
